--- a/frontend/src/components/Recipe.css
+++ b/frontend/src/components/Recipe.css
@@ -1,3 +1,10 @@
-#recipe {
-    padding: 15px 0;
+.headline {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.showcase {
+    display: flex;
+    justify-content: space-between;
 }
