--- a/frontend/src/components/Recipe.css
+++ b/frontend/src/components/Recipe.css
@@ -8,3 +8,32 @@
     display: flex;
     justify-content: space-between;
 }
+
+.servings > button, #post-rating {
+    background-color: darkgreen;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    padding: 4px 12px;
+}
+
+#serving-count {
+    margin: 0px 6px;
+}
+
+#add-to-cart {
+    background-color: darkgreen;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    padding: 3px 10px;
+}
+
+#rating-label {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 20px 0 8px;
+}
+
+#ratings {
+    font-size: 18px;
+}
